[package]
name = "garden"
version = "0.1.0"
authors = ["talves <tony@3alves.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
toml = "0.5.9"
